Shared benchmarks